@@ -8,6 +8,9 @@ Bazaar Release Notes
 IN DEVELOPMENT
 --------------
 
+This release adds a translation of some of the user documentation into Spanish.
+(Contributions of other translations would be very welcome.)
+
   NOTES WHEN UPGRADING:
 
   CHANGES:
